# sslam_resuse

./: .gitignore  CMakeLists.txt  README.md  package.xml  run.md
camera_models/: CMakeLists.txt  readme.md
commands/: kitti_odom.md
config/: global.rviz  sslam_global_config.rviz  sslam_rviz_config.rviz  sslam_rviz_local.rviz  vins_rviz_config.rviz
config/bus/: stereo_config.yaml
config/bus2/: stereo_config.yaml
config/bus_av1/: calc.yaml  camera_local.yaml  mapping.yaml  relocalizer.yaml  stereo_config.yaml  stereo_config.yaml.bak  stereo_prior.yaml
doc/: Doxyfile.in  user-guide.dox
docs/: CMakeLists.txt  Doxyfile.in  welcome.dox
global_fusion/: CMakeLists.txt  package.xml
launch/: bus.launch  bus_av1.launch  bus_av1_local.launch  bus_av1_mapping.launch  bus_av1_relocalizer.launch  bus_core.launch  bus_global.launch  bus_global_av1.launch  bus_global_core.launch
loop_fusion/: CMakeLists.txt  package.xml
ntu_load_ins_07_26/: gps.txt  vio.txt  vio_loop.txt
output/: vio.txt  vio_loop.txt
pose_graph/: CMakeLists.txt  Doxyfile  package.xml  pose_graph_plugin.xml
pose_graph/doc/: Doxyfile.in  technical-overview.dox  welcome.dox
pose_graph/src/: gps_graph.cpp  gps_graph.h  gps_graph_node.cpp  keyframe.cpp  keyframe.h  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp  pose_graph_nodelet.cpp
pose_graph/src/LoopDetect/: Conversion.cpp  Conversion.h  Model.cpp  Tensor.cpp  calcNet.cpp  calcNet.h  model.ckpt-200000.data-00000-of-00002
pose_graph/src/LoopDetect/calc/: calc2.py  detection.py  utils.py
pose_graph/src/LoopDetect/calc/model/: model.ckpt-200000.index
pose_graph/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  cerealArchiver.h  eigen_cerealisation.h  kalman.cpp  kalman.h  mat_cerealisation.h  tic_toc.h  utility.cpp  utility.h
scripts/: index.html
slam_estimator/: CMakeLists.txt  package.xml  slam_plugin.xml
slam_estimator/config/: global.rviz  sslam_rviz_config.rviz  vins_rviz_config.rviz
slam_estimator/config/bus/: cam0_pinhole.yaml  cam1_pinhole.yaml  stereo_config (copy).yaml  stereo_config.yaml
slam_estimator/config/bus2/: cam0_pinhole.yaml  stereo_config.yaml
slam_estimator/config/bus_crop/: cam0_pinhole.yaml  cam1_pinhole.yaml  stereo_config.yaml
slam_estimator/config/honda/: pointgrey_stereo_config.yaml
slam_estimator/config/kitti_odom/: kitti_config03.yaml
slam_estimator/config/kitti_raw/: kitti_09_26_config.yaml
slam_estimator/config/vi_car/: vi_car.yaml
slam_estimator/launch/: bus.launch  bus_core.launch  bus_global.launch  bus_global_core.launch  bus_nodelet.launch  sslam_rviz.launch
slam_estimator/output/: vio.txt
slam_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  KITTIRawTest.cpp  node_slam.cpp  nodelet_slam.cpp  rosNodeTest.cpp  slam_estimator_node.cpp  slame_estimator_node.cpp
slam_estimator/src/estimator/: PoseEstimator.cpp  PoseEstimator.hpp  estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
slam_estimator/src/factor/: gps_factor.h  imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  ins_base.h  ins_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projectionOneFrameTwoCamFactor.cpp  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.cpp  projectionTwoFrameTwoCamFactor.h  projection_factor.cpp  projection_factor.h
slam_estimator/src/featureTracker/: FeatureExtractorThread.cpp  FeatureExtractorThread.hpp  ImageFeatures.cpp  ImageFeatures.hpp  feature_tracker.cpp  feature_tracker.h
slam_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
slam_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  gmc_filter.cpp  gmc_filter.h  macros.hpp  opencv_parsers.cpp  opencv_parsers.hpp  tic_toc.h  timer.cpp  timer.h  utility.cpp  utility.h  visualization.cpp  visualization.h
slam_estimator/src/utility/additional_sensor/: GeometryMsgsEulerAngles.h  GeometryMsgsPoseWithEulerAngles.h  GeometryMsgsPoseWithEulerAnglesStamped.h  GeometryMsgsVector3.h  GeometryMsgsVehicleMeasure.h
slam_estimator/src/utility/cnquadtree/: basicnode.hpp  cnquadtree.cpp  cnquadtree.h  node.hpp
slam_estimator/src/utility/log/: Logger.cpp  Logger.hpp  Profiler.hpp  ScopedProfiler.hpp
slam_estimator/src/utility/time/: time.h
support_files/doc/: CMakeLists.txt  Doxyfile.in  technical-overview.dox  welcome.dox
support_files/doc/source/: Back-end.rst  Front-end.rst  Installation.rst  Map-management.rst  Overview.rst  UserGuide.rst  conf.py  index.rst
support_files/doc/source/_static/: custom.css
support_files/doc/source/api/: classCameraPoseVisualization.rst  classDBoW2_1_1BhattacharyyaScoring.rst  classDBoW2_1_1BowVector.rst  classDBoW2_1_1ChiSquareScoring.rst  classDBoW2_1_1DotProductScoring.rst  classDBoW2_1_1FBrief.rst  classDBoW2_1_1FClass.rst  classDBoW2_1_1FeatureVector.rst  classDBoW2_1_1GeneralScoring.rst  classDBoW2_1_1KLScoring.rst  classDBoW2_1_1L1Scoring.rst  classDBoW2_1_1L2Scoring.rst  classDBoW2_1_1QueryResults.rst  classDBoW2_1_1Result.rst  classDBoW2_1_1TemplatedDatabase.rst  classDBoW2_1_1TemplatedVocabulary.rst  classDUtils_1_1DException.rst  classDUtils_1_1Random.rst  classDUtils_1_1Random_1_1UnrepeatedRandomizer.rst  classDUtils_1_1Timestamp.rst  classDVision_1_1BRIEF.rst  classEstimator.rst  classFeatureManager.rst  classFeaturePerFrame.rst  classFeaturePerId.rst  classFeatureTracker.rst  classGlobalSFM.rst  classIMUFactor.rst  classImageFrame.rst  classInitialBiasFactor.rst  classInitialEXRotation.rst  classInitialPoseFactor.rst  classIntegrationBase.rst  classInterpolationBase.rst  classMarginalizationFactor.rst  classMarginalizationInfo.rst  classMotionEstimator.rst  classPoseLocalParameterization.rst  classProjectionFactor.rst  classProjectionOneFrameTwoCamFactor.rst  (+434 more)
(+64 files in other folders)
